--- a/Submission/app/src/main/res/values/strings.xml
+++ b/Submission/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="desc">desc</string>
     <string name="my_course_app">My Course App</string>
     <string name="let_s_study_and_try">Let\'s Study And Try</string>
+    <string name="halaman_detail">Halaman Detail</string>
 </resources>
